--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,25 +1,102 @@
 ---
-title: "Reproducible Research: Peer Assessment 1"
-output: 
-  html_document:
-    keep_md: true
+title: 'Reproducible Research: Peer Assessment 1'
+author: "GK"
+output:
+    html_document:
+    keep_md: yes
 ---
 
+========================================
 
 ## Loading and preprocessing the data
+```{r load_data,echo=TRUE}
+unzip(zipfile="activity.zip")
+data<- read.csv("activity.csv")
+```
 
+## What is mean total number of steps taken per day? 
+```{r histogram,echo=TRUE}
+library(ggplot2)
+total.steps<-data.frame(tapply(data$steps,data$date,sum,na.rm=T))
+total.steps$date<- rownames(total.steps)
+colnames(total.steps)<- c("Steps","Date")
+ggplot(total.steps,aes(x=Steps)) + geom_histogram(fill="steelblue",binwidth = 1000) + labs(title="Histogram of the total number of steps taken each day",x="Steps",y="Frequency")
+```
 
-
-## What is mean total number of steps taken per day?
-
-
+```{r mean_median,echo=TRUE}
+mea<- mean(total.steps$Steps,na.rm=T)
+med<- median(total.steps$Steps,na.rm=T)
+```
+Mean : `r mea`
+Median : `r med`
 
 ## What is the average daily activity pattern?
+```{r time_plot,echo=TRUE}
+library(ggplot2)
+steps.interval<- data.frame(tapply(data$steps,data$interval,mean,na.rm=T))
+steps.interval$interval<- rownames(steps.interval)
+colnames(steps.interval)<- c("Steps","Interval")
+ggplot(steps.interval,aes(x=as.numeric(Interval),y=Steps)) + geom_line(color="red") + labs(title="Time series plot of the average number of steps taken",x="5 Minute Intervals",y="Steps")
+```
 
-
+```{r max_interval,echo=TRUE}
+maxInterval<- steps.interval[which.max(steps.interval$Steps),]
+```
+The 5-minute interval that, on average, contains the maximum number of steps : `r maxInterval`
 
 ## Imputing missing values
+```{r how_many_missing,echo=TRUE}
+missing<- is.na(data$steps)
+tab<-table(missing)
+```
+`r tab`
+
+All of the missing values are filled in with mean value for that 5-minute
+interval.
+
+```{r fill_na,,echo=TRUE}
+fill.data<- function(steps,interval){
+    filled<-NA
+    if(!is.na(steps))
+        filled<-c(steps)
+    else
+        filled<- (steps.interval[steps.interval$Interval==interval,"Steps"])
+    return(filled)
+}
+filled.data<- data
+filled.data$steps<- mapply(fill.data,filled.data$steps,filled.data$interval)
+```
+
+Histogram of the total number of steps taken each day after missing values are imputed
+```{r new_data_hist,echo=TRUE}
+new.total.steps<- data.frame(tapply(filled.data$steps,filled.data$date,sum,na.rm=T))
+new.total.steps$date<-rownames(new.total.steps)
+colnames(new.total.steps)<- c("Steps","Date")
+ggplot(new.total.steps,aes(x=Steps)) + geom_histogram(fill="green",binwidth = 1000) + labs(x="Steps",y="Frequency",title="Histogram")
+```
+
+Calculate mean and median of the new modified data.
+```{r new_summary,echo=TRUE}
+mea1<- mean(new.total.steps$Steps)
+med1<- median(new.total.steps$Steps)
+```
+
+Old Mean : `r mea`
+Old Median : `r med`
 
 
+New Mean : `r mea1`
+New Median : `r med1`
 
 ## Are there differences in activity patterns between weekdays and weekends?
+```{r weekdata,echo=TRUE}
+filled.data$datetype<- ifelse(as.POSIXlt(filled.data$date)$wday %in% c(0,6),"weekend","weekday")
+```
+
+Now, let's make a panel plot containing plots of average number of steps taken
+on weekdays and weekends.
+```{r panel_plot,echo=TRUE}
+library(dplyr)
+day.data<- filled.data %>% group_by(datetype,interval) %>% summarize(totalSteps=mean(steps))
+ggplot(day.data,aes(x=interval,y=totalSteps,color=datetype)) + geom_line() + facet_grid(datetype~.) + labs(x="5 Minute Interval",y="Steps",title="Average steps taken in Weekdays/Weekend")
+```
